--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.6
+django-heroku==0.3.1
 django-on-heroku==1.1.2
 flake8==4.0.1
 gunicorn==20.1.0
